'stylelint-config-standard' should be install locally
https://github.com/stylelint/stylelint-config-standard#usage

--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,8 @@ machine:
     version: 6.1.0
 dependencies:
   override:
-    - npm install --global stylelint stylelint-config-standard
+    - npm install --global stylelint
+    - npm install stylelint-config-standard
 test:
   override:
     - stylelint ./*.css
