--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -9,6 +9,11 @@ rules:
 
   at-rule-empty-line-before:
     - always
+    - except:
+      - blockless-after-same-name-blockless
+      - first-nested
+    - ignore:
+      - after-comment
     - ignoreAtRules:
       - font-face
 
