Try to use workflow with CircleCI 2.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,45 @@
+defaults: &defaults
+  working_directory: ~/project
+  docker:
+    - image: node:latest
+
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/node:latest
+  install:
+    <<: *defaults
     steps:
+      - restore_cache:
+          key: stylelint-application
       - checkout
       - run:
           name: Install stylelint
           command: |
-            sudo npm install --global stylelint
+            npm install --global stylelint
             npm install stylelint-config-standard
+      - save_cache:
+          paths:
+            - /usr/local/bin/stylelint
+            - /usr/local/lib/node_modules
+          key: stylelint-application-{{ checksum "/usr/local/lib/node_modules/stylelint/package.json" }}
+      - persist_to_workspace:
+          root: /usr/local/bin
+          paths:
+            - stylelint
+      - persist_to_workspace:
+          root: /usr/local/lib
+          paths:
+            - node_modules
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project
+  build:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: /usr/local/bin
+      - attach_workspace:
+          at: /usr/local/lib
       - run:
           name: System information
           command: uname -a
@@ -17,5 +47,29 @@ jobs:
           name: Node.js version
           command: node --version
       - run:
+          name: stylelint version
+          command: stylelint --version
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: /usr/local/bin
+      - attach_workspace:
+          at: /usr/local/lib
+      - attach_workspace:
+          at: ~/
+      - run:
           name: Run stylelint
           command: stylelint ./*.css
+workflows:
+  version: 2
+  stylelint:
+    jobs:
+      - install
+      - build
+          requires:
+            - install
+      - test:
+          requires:
+            - install
+
