Show OS release information

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,10 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: System information
+          name: OS release
+          command: cat /etc/debian_version
+      - run:
+          name: Kernel version
           command: uname -a
       - run:
           name: Node.js version
