--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -27,4 +27,6 @@ rules:
   no-descending-specificity: null
   no-duplicate-selectors: null
   rule-empty-line-before: null
+  selector-class-pattern: null
+  selector-id-pattern: null
   selector-list-comma-newline-after: null
