--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -13,4 +13,4 @@ rules:
   rule-empty-line-before: null
   selector-class-pattern: null
   selector-id-pattern: null
-  selector-list-comma-newline-after: null
+  selector-list-comma-newline-after: 'always-multi-line'
