--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -5,6 +5,7 @@ rules:
     - ignore:
       - after-declaration
 
+  at-rule-no-vendor-prefix: null
   no-descending-specificity: null
   no-duplicate-selectors: null
   rule-empty-line-before: null
